--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,20 +15,30 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 500px;
     border: 1px solid black;
 }
 
 .titel-box {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+
+}
+
+.display-box {
+    border: 1px solid black;
+    width: 80%;
+    height: 60%;
 }
 
 .button-box {
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
+    width: 80%;
+    height: 25%;
 }
 
 .upper-section,
