--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&family=MedievalSharp&display=swap');
+
+:root {
+    --titel-font: "MedievalSharp", cursive;
+    --text-font: "IM Fell English", serif;
+}
+
 * {
     margin: 0;
     padding: 0;
