Connect HTML-Ids and Javascript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ body {
 .event-display,
 .display-box,
 #player-name-input,
+.button-box,
 .upper-section,
 button {
     font-family: var(--text-font);
