--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,34 @@ body {
 
 }
 
+.confirm-window {
+    width: 80%;
+    max-width: 400px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    text-align: center;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.display-box {
+    position: relative;
+    /* Damit das absolute Fenster relativ zu diesem Container positioniert wird */
+}
+
 
 .display-box-flex-column {
     display: flex;
