Write Function for Gameflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,8 @@ body {
 }
 
 /* Reward Buttons */
-.reward-button {
+.reward-button,
+.player-menu-button {
     width: 4rem;
     padding: 5px;
     text-align: center;
