--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,24 @@ body {
     text-align: center;
 }
 
+/* Class display */
+.class-display-option {
+    height: 90%;
+    background-color: rgb(56, 72, 67);
+    border: solid 0.5px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 10px 0 0 0;
+    margin: 10px;
+}
+
+/* class Images */
+.class-image {
+    width: 80%;
+    border-radius: 10%;
+}
 
 /* General styling */
 .title-font {
@@ -218,6 +236,32 @@ body {
 .upper-section,
 button {
     font-family: var(--text-font);
+}
+
+/* General Button Style */
+button {
+    font-size: 1rem;
+    background-color: #3a3a3a;
+    color: #d4d4d4;
+    border: 2px solid #2b2b2b;
+    border-radius: 5px;
+    padding: 2px 20px;
+    text-shadow: 1px 1px 2px #000;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+button:hover {
+    background-color: #4a4e44;
+    color: #e5e5e5;
+    border-color: #67a667;
+    transform: scale(1.05);
+}
+
+button:active {
+    transform: scale(0.8);
+    background-color: #2e2e2e;
 }
 
 .hidden {
