Add Rarity-text-design depending on reward rarity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,9 @@ body {
     border-radius: 5%;
 }
 
+/* Reward section */
+.reward-title .reward-type-text .reward-description
+
 /* Player Menu */
 .player-menu-display {
     width: 90%;
