--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,23 @@ body {
 /* Upper Title Section */
 .title-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 90%;
+    gap: 20%;
     font-family: var(--title-font);
+    padding: 10px 0;
+}
 
+#middle-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
+}
+
+#information-icon {
+    font-size: 1.5rem;
 }
 
 /* Middle Display Section */
