--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ button:active {
     height: 500px;
     border: 1px solid black;
     background-color: #f5f5dcf2;
+    padding: 0 0 20px 0;
 }
 
 /* Upper Title Section */
