Add background for choosen fighting-style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,10 @@ button:active {
     width: 70%;
 }
 
+.active-fighting-style-display {
+    background-color: orange;
+}
+
 /* Attributes menu */
 .stats-list {
     list-style-type: none;
