Fixed padding in Item Display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,6 +294,7 @@ button:active {
     justify-content: center;
     align-items: center;
     font-size: 0.5rem;
+    gap: 0.8rem;
 }
 
 /* The button that opens with the menu-window */
