--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,3 +476,9 @@ button {
     cursor: not-allowed;
     color: gray;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-size: auto;
+    }
+}
