--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -550,8 +550,7 @@ button {
     .class-display-option {
         width: 30%;
         /* Einheitliche Breite */
-        height: auto;
-        max-height: 220px;
+        height: 98%;
         padding: 1rem;
         background-color: rgba(58, 58, 58, 0.9);
         border-radius: 10px;
@@ -611,5 +610,18 @@ button {
 
     h3 {
         font-size: 1.1rem;
+    }
+
+    .class-image,
+    .reward-image {
+        margin: 0;
+    }
+
+    .class-title+h3 {
+        margin: 0;
+    }
+
+    .class-description {
+        overflow-y: scroll;
     }
 }
