--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,13 @@ button:active {
     height: 40%
 }
 
-/* Reward Buttons */
+/* Reward Sequenz */
+#reward-container {
+    display: flex;
+    width: 100%;
+    height: 70%;
+}
+
 .reward-button {
     width: 6rem;
     padding: 5px;
