--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,7 +405,7 @@ button:active {
 #reward-container {
     display: flex;
     width: 100%;
-    height: 70%;
+    height: 100%;
 }
 
 .reward-button {
@@ -414,6 +414,9 @@ button:active {
     text-align: center;
 }
 
+.reward-display {
+    justify-content: start;
+}
 
 /* Class display */
 .class-display-option,
