Change Loading-Screen from fixed to absolute

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,15 +112,14 @@ button:active {
     color: #ccc;
 }
 
-/* Ladebildschirm */
-
+/* Loading Screen */
 #loading-screen {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, 0.90);
     display: flex;
     justify-content: center;
     align-items: center;
