--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,11 +115,11 @@ button:active {
 /* Loading Screen */
 #loading-screen {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.90);
+    top: 50%;
+    left: 50%;
+    width: 95%;
+    height: 95%;
+    background-color: rgba(0, 0, 0, 0.95);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -127,9 +127,10 @@ button:active {
     font-size: 2rem;
     color: white;
     font-family: var(--title-font);
+    transform: translate(-50%, -50%);
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.5s ease-out, visibility 0.5s ease-out;
+    transition: opacity 0.15s ease-out, visibility 0.15s ease-out;
 }
 
 #loading-screen.active {
