--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,20 +144,46 @@ button:active {
     margin: 0.125rem;
 }
 
+.input-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 80%;
+    width: 60%
+}
+
+
 .input-container {
     position: relative;
-    left: 50%;
     width: 100%;
 }
 
+/* Input-Feld */
+#player-name-input {
+    width: 100%;
+    padding: 5px;
+    font-size: 0.8rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+
 #error-message {
     position: absolute;
-    top: 35px;
-    left: 5px;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    margin-top: 5px;
     color: red;
     font-size: 12px;
+    text-align: center;
     display: none;
+
 }
+
+
+
 
 /* Middle Section pure html elements */
 .display-box {
