Change color of placeholder in input field

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,10 @@ button:active {
     border-radius: 5px;
 }
 
+#player-name-input::placeholder {
+    color: var(--placeholder-color, gray);
+}
+
 
 /* Middle Section pure html elements */
 .display-box {
