--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,6 +445,7 @@ button:active {
 /* Reward Sequenz */
 #reward-container {
     display: flex;
+    justify-content: center;
     width: 100%;
     height: 100%;
 }
@@ -652,10 +653,23 @@ button {
         margin-bottom: 1px;
     }
 
-    .reward-display-option,
-    .class-display-option {
+    .reward-display-option {
         width: 30%;
         height: 90%;
+        padding: 1rem;
+        background-color: rgba(58, 58, 58, 0.9);
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+        text-align: center;
+        color: #d4d4d4;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .class-display-option {
+        width: 30%;
+        height: 100%;
         padding: 1rem;
         background-color: rgba(58, 58, 58, 0.9);
         border-radius: 10px;
@@ -675,8 +689,8 @@ button {
     .class-image {
         width: 100%;
         height: auto;
+        min-width: 70px;
         max-width: 100px;
-        /* Einheitliche Größe */
         border-radius: 10px;
         margin-bottom: 1rem;
     }
@@ -731,9 +745,14 @@ button {
     }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 410px) {
     .class-display-option {
+        height: 100%;
         margin: 0.3rem;
+    }
+
+    .class-item-box {
+        height: 100%;
     }
 
 
